--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,4 @@
-This file will be hold the information about authors
+# This file lists the awesome `simple_shell` repository Authors/contributors.
+
+Hasanli Ilyas   <ilyashesenli48@gmail.com>
+Ismayilov Farid <ismayilovferid34@gmail.com>
